--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,14 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+    <string name="third_fragment_label">Third Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="email">Correo electronico</string>
     <string name="passwordA">Contraseña</string>
-    <string name="createA">¿No tienes cuenta? Crea una</string>
-    <string name="linkCreateA">aquí</string>
+    <string name="createA">¿No tienes cuenta?\n</string>
+    <string name="linkCreateA">Crea una aquí</string>
+    <string name="Login">INICIAR SESIÓN</string>
 
 
     <string name="hello_first_fragment">Hello first fragment</string>
