--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,10 @@
     <string name="createA">¿No tienes cuenta?\n</string>
     <string name="linkCreateA">Crea una aquí</string>
     <string name="Login">INICIAR SESIÓN</string>
+    <string name="home">Estas en el home del app</string>
+    <string name="logout">Cerrar sesión</string>
+    <string name="pizza_create">Crea tu pizza</string>
+    <string name="fav">Favoritos</string>
 
 
     <string name="hello_first_fragment">Hello first fragment</string>
