--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">My Pizza</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="third_fragment_label">Third Fragment</string>
+    <string name="first_fragment_label">Login</string>
+    <string name="second_fragment_label">Main Page</string>
+    <string name="third_fragment_label">Create Account</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="email">Correo electronico</string>
