--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">My Pizza</string>
     <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
+    <!-- Strings used for com.example.mypizza.ui.fragments for navigation -->
     <string name="first_fragment_label">Login</string>
     <string name="second_fragment_label">Main Page</string>
     <string name="third_fragment_label">Create Account</string>
