--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Pizza</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Buscar</string>
     <!-- Strings used for com.example.mypizza.ui.fragments for navigation -->
     <string name="first_fragment_label">Login</string>
     <string name="second_fragment_label">Main Page</string>
@@ -15,6 +16,7 @@
     <string name="home">Estas en el home del app</string>
     <string name="logout">Cerrar sesión</string>
     <string name="pizza_create">Crea tu pizza</string>
+    <string name="config">Configuracion</string>
     <string name="fav">Favoritos</string>
 
 
