Corregi lo de herrera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="first_fragment_label">Login</string>
     <string name="second_fragment_label">Main Page</string>
     <string name="third_fragment_label">Create Account</string>
+
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="email">Correo electronico</string>
@@ -18,6 +19,11 @@
     <string name="pizza_create">Crea tu pizza</string>
     <string name="config">Configuracion</string>
     <string name="fav">Favoritos</string>
+    <string name="rec">Recomendados</string>
+    <string name="conf_pass">Confirmar Contraseña</string>
+    <string name="crear_cuent">Crear Cuenta</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="name">Nombre</string>
 
 
     <string name="hello_first_fragment">Hello first fragment</string>
