--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <!-- Google maps api key   -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCjUfBPKdfyUqUQbXs0TFgSuVeBsasVGIo</string>
 </resources>
