--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="splash_pedido" >Pedido Registrado</string>
+
+    <!-- Google maps api key   -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCjUfBPKdfyUqUQbXs0TFgSuVeBsasVGIo</string>
+
 </resources>
